--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   </head>
   <body>
     <header class="header text-white">
-      <h1>
-        <div class="fz-m fw-7">Here’s</div>
-        <div class="fz-xl fw-9 lh-18">JOANNE</div>
+      <h1 class="fz-m fw-7">
+        Here’s
+        <br />
+        <span class="fz-xl fw-9 lh-18">JOANNE</span>
       </h1>
       <h3 class="fz-m fw-7 lh-6 mt-8">
         Founder of “XXXD Official’’ <br />
@@ -48,8 +49,7 @@
             Department of Visual Design
           </li>
         </ul>
-        <hr class="mt-6" />
-        <ul class="fz-m fw-7">
+        <ul class="divider fz-m fw-7">
           <li class="list-dot mt-7">Founder of ‘’XXXD Official’’</li>
           <li class="list-dot mt-7">Graphic Designer</li>
           <li class="list-dot mt-7">Graphic Intern of Hex School</li>
@@ -65,8 +65,8 @@
             主打概念潮流 T-Shirt
           </p>
           <img class="mt-17" src="./images/brand_img1.png" alt="brand01" />
-          <div class="img-container mt-10">
-            <img src="./images/brand_img2.png" alt="brand02" />
+          <div class="brand-imgs mt-10">
+            <img class="mr-6" src="./images/brand_img2.png" alt="brand02" />
             <img src="./images/brand_img3.png" alt="brand03" />
           </div>
         </div>
@@ -77,40 +77,36 @@
           2016-2020 年累積的作品 <br />
           海報/廣告/攝影/LOGO/3D
         </p>
-        <ul class="img-container mt-14">
-          <li class="img-flex">
+        <ul class="mt-14 works-imgs">
+          <li>
             <img src="./images/work_img1.png" alt="海報設計/2017" />
             <p class="mt-4">海報設計/2017</p>
           </li>
-          <li class="img-flex">
+          <li>
             <img src="./images/work_img2.png" alt="海報設計/2018" />
             <p class="mt-4">海報設計/2018</p>
           </li>
-          <li class="img-flex">
+          <li>
             <img src="./images/work_img3.png" alt="海報設計/2018" />
             <p class="mt-4">海報設計/2018</p>
           </li>
-        </ul>
-        <ul class="img-container mt-12">
-          <li class="img-flex">
+          <li>
             <img src="./images/work_img4.png" alt="概念攝影/2018" />
             <p class="mt-4">概念攝影/2018</p>
           </li>
-          <li class="img-flex">
+          <li>
             <img src="./images/work_img5.png" alt="概念攝影/2018" />
             <p class="mt-4">概念攝影/2018</p>
           </li>
-        </ul>
-        <ul class="img-container mt-12">
-          <li class="img-flex">
+          <li>
             <img src="./images/work_img6.png" alt="sasa 酒標設計/2019" />
             <p class="mt-4">sasa 酒標設計/2019</p>
           </li>
-          <li class="img-flex">
+          <li>
             <img src="./images/work_img7.png" alt="攝影創作/2018" />
             <p class="mt-4">攝影創作/2018</p>
           </li>
-          <li class="img-flex">
+          <li>
             <img src="./images/work_img8.png" alt="官網設計/2020" />
             <p class="mt-4">官網設計/2020</p>
           </li>
